# RadboudCompression

./: Readme.md
Biomechanical Model/: Readme.md
Biomechanical Model/Matlab Code/: clearmesh.m
Biomechanical Model/New Model Extraction/: CMakeLists.txt  Dockerfile  source.cpp
Biomechanical Model/New Model Extraction/pythonAux/: modelExtractionFromDirectory.py  newCasesExtraction.py
Biomechanical Model/New Model Extraction/release/: CMakeCache.txt  Makefile  cmake_install.cmake
Biomechanical Model/New Model Extraction/release/ITKFactoryRegistration/: itkMeshIOFactoryRegisterManager.h
Biomechanical Model/Relabeling Images/: CMakeLists.txt  source.cpp
Biomechanical Model/Rewrite Information/: CMakeLists.txt  Source.cpp
Biomechanical Model/Rewrite Information/pythonCode/: RewriteInformation.py
Biomechanical Model/clean Mesh/: CMakeLists.txt  Source.cpp
BiomechanicalModel/: Readme.md
BiomechanicalModel/Matlab Code/: nrrdread.m  writeVTK.m  writeVTKwithData.m
BiomechanicalModel/New Model Extraction/: CMakeLists.txt  source.cpp
BiomechanicalModel/Rewrite Information/: Source.cpp
BiomechanicalModel/RewriteInformation/: CMakeLists.txt  Readme.md
FEM simulation/: Readme.md
FEM simulation/FeBio Model/: CMakeLists.txt  paddleConstruction.cpp  writeFeBioSimulation.cpp  writeFeBioSimulation.h
FEM simulation/FeBio Model/Examples/: CMakeLists.txt  UGrid.cxx
FEM simulation/Write Nifty Model/: CMakeLists.txt  NewProjection.cpp  NiftySimEjecutable.cpp  NiftySimEjecutable.h  Source.cpp  auxiliarDefinitions.h  xmlModelWriter.h
FEM simulation/pythonModelWriter/: PCA-Volumen-results.csv  PCA-with-lamda-av-Volumen-results.csv  auxiliarDefinitions.py  writeNiftyModel.py
FEM simulation/pythonModelWriter/old (no works)/: writeNiftySimModel.py
FEMsimulation/Write Nifty Model/: CMakeLists.txt  NewProjection.h  NiftySimEjecutable.cpp  NiftySimEjecutable.h  Source.cpp  auxiliarDefinitions copy.h  auxiliarDefinitions.h  xmlModelWriter.cpp  xmlModelWriter.h
More/: Readme.md  optimizationPipeline.py  untitled0-pruebaDistacias.py
More/breastCompress-master/: breastCompress.cxx
More/cpp/: MechanicalProperties.h  NiftySimEjecutable.cpp  Source.cpp  auxiliarDefinitions.h
More/python/: RadboudThicknes.csv  extractInformationFromBiomechanicalModels.py  getBiomechanicalModelsFromCTSegmentations.py  newTray-info.csv  optimizingBreastShapeFromPCA.py  primary-info.csv
More/python/aux/: __init__.py  compDistances.py  toCompress.py
Phantom Reconstruction/: Readme.md
Phantom Reconstruction/Extract Compressed Mesh/: CMakeLists.txt  Source.cpp
Phantom Reconstruction/Reconstruct Image/: CMakeLists.txt  CudaLibrary_kernels.cu  CudaProjection.cu  CudaProjection.h  Dockerfile  NewProjection.cpp  Source.cpp
Phantom Reconstruction/Reconstruct Image/pythonAux/: ReconstructFromDirectories.py
PhantomReconstruction/Reconstruct Image/: CMakeLists.txt  CudaLibrary_kernels.cu  CudaProjection.cu  NewProjection.h  RegularGrid.h
Unfinised_EGM/: Command_con_aliassing.cpp  Prototype_pattern.cpp  Source.cpp  internalMesh.h  source
